Fixed Spelling, Adjusted Responsiveness, Started Work on Responsive NavBar, Adjusted Line Spacing.

--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -44,13 +44,24 @@ p,
 ol {
     font-family: "Oxygen", sans-serif;
     font-weight: 400;
-    line-height: 1em;
+    line-height: 1.5em;
     color: var(--text-color-body);
 }
 
 /* ====== NavBar Start ====== */
 
-ul {
+nav {
+    display: inline-block;
+    list-style-type: none;
+    text-align: center;
+    /* overflow: hidden; */
+}
+
+nav .icon {
+    display: none;
+}
+
+nav ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
@@ -59,33 +70,59 @@ ul {
     position: relative;
 }
 
-li a {
+nav ul li {
+    float: left;
+}
+
+nav ul li a {
     color: var(--text-color-title);
     font-family: "Oxygen", sans-serif;
     font-weight: 400;
     display: inline;
     width: 5em;
+    background-color: var(--background-color-dark);
+    padding: 0.63em;
 }
 
-li a:hover {
+nav ul li a:hover {
     background-color: var(--background-color-dark-hover)
 }
 
-li {
-    float: left;
+nav ul li a.active {
+    background-color: var(--background-color-dark-hover);
+    color: var(--text-color-title);
 }
 
-a {
-    background-color: var(--background-color-dark);
-    padding: 0.63em;
-    /* display: block; */
+/* @media screen and (max-width: 600px) {
+    nav a:not(:first-child) {
+        display: none;
+    }
+
+    nav a.icon {
+        float: right;
+        display: block;
+    }
 }
 
-nav {
-    display: inline-block;
-    list-style-type: none;
-    text-align: center;
-}
+@media screen and (max-width: 600px) {
+    nav.responsive {
+        position: relative;
+        right: 0;
+        top: 0;
+    }
+
+    nav.responsive a.icon {
+        position: absolute;
+        right: 0;
+        top: 0;
+    }
+
+    nav.responsive a {
+        float: none;
+        display: block;
+        text-align: left;
+    }
+} */
 
 /* ====== NavBar End ====== */
 
@@ -137,12 +174,10 @@ summary:hover {
     max-width: auto;
     text-align: left;
     padding: 1em 1em 1em 1em;
-    cursor: pointer;
     background-color: var(--background-color-dark-hover);
 }
 
 .notebook {
-    width: auto;
     height: 100px;
     display: inline-block;
 }
